# weesels-rs

./: Cargo.toml  Makefile  README.md  weesels.conf.example
src/: cli.rs  config.rs  errors.rs  main.rs
src/ui/: input.rs  mod.rs
src/wee/: auth.rs  de.rs  messages.rs  mod.rs
