[package]
name = "weesels"
version = "0.1.0"
authors = [ "Simon Poirier <simpoir@gmail.com>" ]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
argh = "0.1.3"
async-channel = "1.4.2"
async-native-tls = "0.3.3"
better-panic = "0.2.0"
futures = "*"
hex = "0.4.2"
libc = "0.2.77"
log = "*"
native-tls = "0.2.4"
nix = "0.18.0"
notify-rust = "4.0.0"
openssl = "0.10.30"
serde = { version = "1.0.106", features = [ "derive" ] }
signal-hook = { version = "0.1.16" }
simplelog = "0.8.0"
smol = "1.0.1"
termion = "*"
textwrap = "0.12.1"
time = "0.2.21"
toml = "0.5.6"
tui = "*"
unicode-width = "0.1.8"
xdg = "2.2.0"

[dev-dependencies]
tempfile = "3.1.0"
